--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ header {
     background-color: #6d0100;
     width: 100%;
     color: white;
+    min-height: 200px;
 }
 #logoTitle {
     display: flex;
