changed background-color on offeringButton

--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ header {
     font-family: 'brandon_grotesqueblack';
     text-transform: uppercase;
     text-decoration: none;
-    background-color: #71df8e;
+    background-color: #0bb634;
     color: white;
     letter-spacing: 3px;
     font-size: 20px;
