Added new announcement Helping Hands
added links to the for loop. All announcements will have a link button added in. Will add in an if statement for functionality later if links are not present. Will also add in an if statement for null images too.

--- a/style.css
+++ b/style.css
@@ -245,6 +245,9 @@ main {
     padding: 10px 20px;
     border-radius: 8px;
 }
+.announceDetContLink{
+    padding-bottom: 20px;
+}
 
 .orderTitle {
     margin-top: 5px;
