--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ main {
     width: 100%;
     height: 100%;
 }
-.announceDetCont, .orderWorshipContainer, .contactContainer {
+.announceDetCont, .orderWorshipContainer, .worshipLyricsContainer, .contactContainer {
     padding: 20px;
 }
 .announceImg {
@@ -225,7 +225,7 @@ main {
     text-transform: none;
 }
 
-.announceDesc, .orderDesc{
+.announceDesc, .orderDesc, .lyricsDesc{
     font-family: 'tisaproregular';
     text-transform: none;
     font-size: 15px;
@@ -261,6 +261,21 @@ main {
     letter-spacing: 1px;
 }
 .orderDesc {
+    margin-top: 5px;
+    margin-bottom: 0;
+}
+.lyricsTitle {
+    margin-top: 5px;
+    margin-bottom: 0;
+    font-size: 15px;
+    letter-spacing: 3px;
+}
+.lyricsTitleAlt {
+    margin-top: 0px;
+    font-size: 15px;
+    letter-spacing: 1px;
+}
+.lyricsDesc {
     margin-top: 5px;
     margin-bottom: 0;
 }
