--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'tisaproregular';
+    letter-spacing: .23px;
     background-color: white;
     overflow: auto;
     /* background-image: linear-gradient(rgb(238, 238, 238), rgb(255, 255, 255)); */
@@ -86,7 +87,8 @@ header {
     background-color: #6d0100;
     width: 100%;
     color: white;
-    min-height: 220px;
+    min-height: 275px;
+    padding-top: 15px;
 }
 #logoTitle {
     display: flex;
@@ -103,8 +105,8 @@ header {
     font-family: 'brandon_grotesqueblack';
     text-transform: uppercase;
     letter-spacing: 3px;
-    font-size: 16px;
-    margin-top: 5px;
+    font-size: 24px;
+    margin-top: 10px;
 }
 .deets{
     list-style: none;
@@ -113,6 +115,7 @@ header {
     font-size: 16px;
     line-height: 22px;
     margin-top: 0;
+    letter-spacing: .45px;
 }
 .deets li{
     display: flex;
@@ -121,7 +124,7 @@ header {
 }
 
 #logo {
-    height: 30px;
+    height: 40px;
 }
 
 
@@ -135,12 +138,14 @@ header {
     padding: 25px;
     font-size: 15px;
     line-height: 23px;
+    letter-spacing: .23px;
 }
 #offeringBlurb {
     padding: 25px;
     font-size: 15px;
     line-height: 20px;
     text-align: center;
+    letter-spacing: 0.3px;
 }
 #offeringButton {
     font-family: 'brandon_grotesqueblack';
@@ -166,7 +171,6 @@ header {
     justify-content: space-evenly;
     list-style: none;
     text-decoration: none;
-    text-transform: uppercase;
     padding: 0px;
     width: 100%;
     font-size: 18px;
@@ -177,6 +181,7 @@ header {
     margin-top: 10px;
     padding: 5px;
     padding-left: 10px;
+    letter-spacing: 0.23px;
 }
 .barLink {
     text-decoration: none;
@@ -184,6 +189,8 @@ header {
     width: 100%;
     display: flex;
     flex-direction: row;
+    text-transform: uppercase;
+    letter-spacing: 0.23px;
 
 }
 .expand {
@@ -213,16 +220,17 @@ main {
 .announceTitle {
     margin-top: 5px;
     margin-bottom: 0;
-    font-family: 'tisapromedium';
+    font-family: 'tisaproregular';
+    letter-spacing: 1.8px;
 }
 
 .announceDate {
     margin-top: 5px;
     margin-bottom: 0;
-    font-size: 20px;
+    font-size: 18px;
     color: rgb(180, 180, 180);
     font-family: 'brandon_grotesqueblack';
-    text-transform: none;
+    text-transform: uppercase;
 }
 
 .announceDesc, .orderDesc, .lyricsDesc, p {
