--- a/style.css
+++ b/style.css
@@ -293,6 +293,7 @@ main {
     margin-bottom: 20px;
     text-transform: none;
     font-family: 'tisaproregular';
+    font-size: 15px;
 }
 
 #webLink {
